--- a/MyOLRibbon/My Project/Settings.settings
+++ b/MyOLRibbon/My Project/Settings.settings
@@ -5,10 +5,10 @@
     <Setting Name="TimeOffRequestsConnectionString" Type="(Connection string)" Scope="Application">
       <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
 &lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-  &lt;ConnectionString&gt;Provider=Microsoft.ACE.OLEDB.12.0;Data Source=\\tlsok.local\userdata\TulsaUsers\ASmedley\Documents\Databases\TimeOffRequests.accdb&lt;/ConnectionString&gt;
+  &lt;ConnectionString&gt;Provider=Microsoft.ACE.OLEDB.12.0;Data Source=C:\Users\ASmedley\OneDrive - Traffic &amp;amp; Lighting Systems, LLC\Documents\Databases\TimeOffRequests.accdb&lt;/ConnectionString&gt;
   &lt;ProviderName&gt;System.Data.OleDb&lt;/ProviderName&gt;
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
-      <Value Profile="(Default)">Provider=Microsoft.ACE.OLEDB.12.0;Data Source=\\tlsok.local\userdata\TulsaUsers\ASmedley\Documents\Databases\TimeOffRequests.accdb</Value>
+      <Value Profile="(Default)">Provider=Microsoft.ACE.OLEDB.12.0;Data Source=C:\Users\ASmedley\OneDrive - Traffic &amp; Lighting Systems, LLC\Documents\Databases\TimeOffRequests.accdb</Value>
     </Setting>
     <Setting Name="LocateLandingPath" Type="System.String" Scope="User">
       <Value Profile="(Default)">\\TLS-FILE\TUL TLS Data\Job Folders\LocateFolder\OpenLocates\Current\Complete\</Value>
