--- a/MyOLRibbon/app.config
+++ b/MyOLRibbon/app.config
@@ -7,7 +7,7 @@
     </configSections>
     <connectionStrings>
         <add name="MyOLRibbon.MySettings.TimeOffRequestsConnectionString"
-            connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=\\tlsok.local\userdata\TulsaUsers\ASmedley\Documents\Databases\TimeOffRequests.accdb"
+            connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=C:\Users\ASmedley\OneDrive - Traffic &amp; Lighting Systems, LLC\Documents\Databases\TimeOffRequests.accdb"
             providerName="System.Data.OleDb" />
     </connectionStrings>
     <system.diagnostics>
