--- a/MyOLRibbon/app.config
+++ b/MyOLRibbon/app.config
@@ -35,16 +35,16 @@
     <userSettings>
         <MyOLRibbon.MySettings>
             <setting name="LocateLandingPath" serializeAs="String">
-                <value>\\TLS-FILE\TUL TLS Data\Job Folders\LocateFolder\OpenLocates\Current\Complete\</value>
+                <value>\\TLS-FILE\TUL TLS Data\Locates\OpenLocates\Current\Complete\</value>
             </setting>
             <setting name="TaskOrderPath" serializeAs="String">
-                <value>\\TLS-FILE\TUL TLS Data\Job Folders\Tulsa\Small Jobs\TLS\Transcore Task Orders\</value>
+                <value>\\TLS-FILE\TUL TLS Data\Job Folders\Small Jobs\TLS\Transcore Task Orders\</value>
             </setting>
             <setting name="TLSJobPath" serializeAs="String">
-                <value>\\TLS-FILE\TUL TLS Data\Job Folders\Tulsa\Small Jobs\TLS\</value>
+                <value>\\TLS-FILE\TUL TLS Data\Job Folders\Small Jobs\TLS\</value>
             </setting>
             <setting name="STIJobPath" serializeAs="String">
-                <value>\\TLS-FILE\TUL TLS Data\Job Folders\Tulsa\Small Jobs\STI\</value>
+                <value>\\TLS-FILE\TUL TLS Data\Job Folders\Small Jobs\STI\</value>
             </setting>
         </MyOLRibbon.MySettings>
     </userSettings>
